parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> dev_sec cmd_sec
Rule 2     dev_sec -> DISPOSITIVOS COLON dev_list FIMDISPOSITIVOS
Rule 3     dev_list -> dev_ice dev_list
Rule 4     dev_list -> dev_ice
Rule 5     dev_ice -> ID_DEV_ICE
Rule 6     dev_ice -> ID_DEV_ICE LBRACKET ID_OBS RBRACKET
Rule 7     dev_ice -> ID_DEV_ICE LBRACKET ID_DEV_ICE RBRACKET
Rule 8     cmd_sec -> cmd_list
Rule 9     cmd_list -> cmd SEMICOLON cmd_list
Rule 10    cmd_list -> cmd SEMICOLON
Rule 11    cmd -> attrib
Rule 12    cmd -> obsact
Rule 13    cmd -> act
Rule 14    attrib -> DEF ID_OBS EQUAL val
Rule 15    attrib -> DEF ID_DEV_ICE EQUAL val
Rule 16    val -> NUMBER
Rule 17    val -> BOOL
Rule 18    obsact -> QUANDO obs COLON act
Rule 19    obsact -> QUANDO obs COLON act SENAO act
Rule 20    obs -> ID_OBS OPLOGIC val
Rule 21    obs -> ID_DEV_ICE OPLOGIC val
Rule 22    obs -> ID_OBS OPLOGIC val AND obs
Rule 23    obs -> ID_DEV_ICE OPLOGIC val AND obs
Rule 24    act -> EXECUTE action EM ID_DEV_ICE
Rule 25    action -> LIGAR
Rule 26    action -> DESLIGAR
Rule 27    act -> ALERTA PARA ID_DEV_ICE COLON MSG
Rule 28    act -> ALERTA PARA ID_DEV_ICE COLON MSG COMMA ID_OBS
Rule 29    act -> ALERTA PARA ID_DEV_ICE COLON MSG COMMA ID_DEV_ICE
Rule 30    act -> DIFUNDIR COLON MSG ARROW LBRACKET dev_list_n RBRACKET
Rule 31    act -> DIFUNDIR COLON MSG ID_OBS ARROW LBRACKET dev_list_n RBRACKET
Rule 32    act -> DIFUNDIR COLON MSG ID_DEV_ICE ARROW LBRACKET dev_list_n RBRACKET
Rule 33    dev_list_n -> ID_DEV_ICE
Rule 34    dev_list_n -> ID_DEV_ICE COMMA dev_list_n

Terminals, with rules where they appear

ALERTA               : 27 28 29
AND                  : 22 23
ARROW                : 30 31 32
BOOL                 : 17
COLON                : 2 18 19 27 28 29 30 31 32
COMMA                : 28 29 34
DEF                  : 14 15
DESLIGAR             : 26
DIFUNDIR             : 30 31 32
DISPOSITIVOS         : 2
EM                   : 24
EQUAL                : 14 15
EXECUTE              : 24
FIMDISPOSITIVOS      : 2
ID_DEV_ICE           : 5 6 7 7 15 21 23 24 27 28 29 29 32 33 34
ID_OBS               : 6 14 20 22 28 31
LBRACKET             : 6 7 30 31 32
LIGAR                : 25
MSG                  : 27 28 29 30 31 32
NUMBER               : 16
OPLOGIC              : 20 21 22 23
PARA                 : 27 28 29
QUANDO               : 18 19
RBRACKET             : 6 7 30 31 32
SEMICOLON            : 9 10
SENAO                : 19
error                : 

Nonterminals, with rules where they appear

act                  : 13 18 19 19
action               : 24
attrib               : 11
cmd                  : 9 10
cmd_list             : 8 9
cmd_sec              : 1
dev_ice              : 3 4
dev_list             : 2 3
dev_list_n           : 30 31 32 34
dev_sec              : 1
obs                  : 18 19 22 23
obsact               : 12
program              : 0
val                  : 14 15 20 21 22 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . dev_sec cmd_sec
    (2) dev_sec -> . DISPOSITIVOS COLON dev_list FIMDISPOSITIVOS

    DISPOSITIVOS    shift and go to state 3

    program                        shift and go to state 1
    dev_sec                        shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> dev_sec . cmd_sec
    (8) cmd_sec -> . cmd_list
    (9) cmd_list -> . cmd SEMICOLON cmd_list
    (10) cmd_list -> . cmd SEMICOLON
    (11) cmd -> . attrib
    (12) cmd -> . obsact
    (13) cmd -> . act
    (14) attrib -> . DEF ID_OBS EQUAL val
    (15) attrib -> . DEF ID_DEV_ICE EQUAL val
    (18) obsact -> . QUANDO obs COLON act
    (19) obsact -> . QUANDO obs COLON act SENAO act
    (24) act -> . EXECUTE action EM ID_DEV_ICE
    (27) act -> . ALERTA PARA ID_DEV_ICE COLON MSG
    (28) act -> . ALERTA PARA ID_DEV_ICE COLON MSG COMMA ID_OBS
    (29) act -> . ALERTA PARA ID_DEV_ICE COLON MSG COMMA ID_DEV_ICE
    (30) act -> . DIFUNDIR COLON MSG ARROW LBRACKET dev_list_n RBRACKET
    (31) act -> . DIFUNDIR COLON MSG ID_OBS ARROW LBRACKET dev_list_n RBRACKET
    (32) act -> . DIFUNDIR COLON MSG ID_DEV_ICE ARROW LBRACKET dev_list_n RBRACKET

    DEF             shift and go to state 10
    QUANDO          shift and go to state 11
    EXECUTE         shift and go to state 12
    ALERTA          shift and go to state 13
    DIFUNDIR        shift and go to state 14

    cmd_sec                        shift and go to state 4
    cmd_list                       shift and go to state 5
    cmd                            shift and go to state 6
    attrib                         shift and go to state 7
    obsact                         shift and go to state 8
    act                            shift and go to state 9

state 3

    (2) dev_sec -> DISPOSITIVOS . COLON dev_list FIMDISPOSITIVOS

    COLON           shift and go to state 15


state 4

    (1) program -> dev_sec cmd_sec .

    $end            reduce using rule 1 (program -> dev_sec cmd_sec .)


state 5

    (8) cmd_sec -> cmd_list .

    $end            reduce using rule 8 (cmd_sec -> cmd_list .)


state 6

    (9) cmd_list -> cmd . SEMICOLON cmd_list
    (10) cmd_list -> cmd . SEMICOLON

    SEMICOLON       shift and go to state 16


state 7

    (11) cmd -> attrib .

    SEMICOLON       reduce using rule 11 (cmd -> attrib .)


state 8

    (12) cmd -> obsact .

    SEMICOLON       reduce using rule 12 (cmd -> obsact .)


state 9

    (13) cmd -> act .

    SEMICOLON       reduce using rule 13 (cmd -> act .)


state 10

    (14) attrib -> DEF . ID_OBS EQUAL val
    (15) attrib -> DEF . ID_DEV_ICE EQUAL val

    ID_OBS          shift and go to state 17
    ID_DEV_ICE      shift and go to state 18


state 11

    (18) obsact -> QUANDO . obs COLON act
    (19) obsact -> QUANDO . obs COLON act SENAO act
    (20) obs -> . ID_OBS OPLOGIC val
    (21) obs -> . ID_DEV_ICE OPLOGIC val
    (22) obs -> . ID_OBS OPLOGIC val AND obs
    (23) obs -> . ID_DEV_ICE OPLOGIC val AND obs

    ID_OBS          shift and go to state 20
    ID_DEV_ICE      shift and go to state 21

    obs                            shift and go to state 19

state 12

    (24) act -> EXECUTE . action EM ID_DEV_ICE
    (25) action -> . LIGAR
    (26) action -> . DESLIGAR

    LIGAR           shift and go to state 23
    DESLIGAR        shift and go to state 24

    action                         shift and go to state 22

state 13

    (27) act -> ALERTA . PARA ID_DEV_ICE COLON MSG
    (28) act -> ALERTA . PARA ID_DEV_ICE COLON MSG COMMA ID_OBS
    (29) act -> ALERTA . PARA ID_DEV_ICE COLON MSG COMMA ID_DEV_ICE

    PARA            shift and go to state 25


state 14

    (30) act -> DIFUNDIR . COLON MSG ARROW LBRACKET dev_list_n RBRACKET
    (31) act -> DIFUNDIR . COLON MSG ID_OBS ARROW LBRACKET dev_list_n RBRACKET
    (32) act -> DIFUNDIR . COLON MSG ID_DEV_ICE ARROW LBRACKET dev_list_n RBRACKET

    COLON           shift and go to state 26


state 15

    (2) dev_sec -> DISPOSITIVOS COLON . dev_list FIMDISPOSITIVOS
    (3) dev_list -> . dev_ice dev_list
    (4) dev_list -> . dev_ice
    (5) dev_ice -> . ID_DEV_ICE
    (6) dev_ice -> . ID_DEV_ICE LBRACKET ID_OBS RBRACKET
    (7) dev_ice -> . ID_DEV_ICE LBRACKET ID_DEV_ICE RBRACKET

    ID_DEV_ICE      shift and go to state 29

    dev_list                       shift and go to state 27
    dev_ice                        shift and go to state 28

state 16

    (9) cmd_list -> cmd SEMICOLON . cmd_list
    (10) cmd_list -> cmd SEMICOLON .
    (9) cmd_list -> . cmd SEMICOLON cmd_list
    (10) cmd_list -> . cmd SEMICOLON
    (11) cmd -> . attrib
    (12) cmd -> . obsact
    (13) cmd -> . act
    (14) attrib -> . DEF ID_OBS EQUAL val
    (15) attrib -> . DEF ID_DEV_ICE EQUAL val
    (18) obsact -> . QUANDO obs COLON act
    (19) obsact -> . QUANDO obs COLON act SENAO act
    (24) act -> . EXECUTE action EM ID_DEV_ICE
    (27) act -> . ALERTA PARA ID_DEV_ICE COLON MSG
    (28) act -> . ALERTA PARA ID_DEV_ICE COLON MSG COMMA ID_OBS
    (29) act -> . ALERTA PARA ID_DEV_ICE COLON MSG COMMA ID_DEV_ICE
    (30) act -> . DIFUNDIR COLON MSG ARROW LBRACKET dev_list_n RBRACKET
    (31) act -> . DIFUNDIR COLON MSG ID_OBS ARROW LBRACKET dev_list_n RBRACKET
    (32) act -> . DIFUNDIR COLON MSG ID_DEV_ICE ARROW LBRACKET dev_list_n RBRACKET

    $end            reduce using rule 10 (cmd_list -> cmd SEMICOLON .)
    DEF             shift and go to state 10
    QUANDO          shift and go to state 11
    EXECUTE         shift and go to state 12
    ALERTA          shift and go to state 13
    DIFUNDIR        shift and go to state 14

    cmd                            shift and go to state 6
    cmd_list                       shift and go to state 30
    attrib                         shift and go to state 7
    obsact                         shift and go to state 8
    act                            shift and go to state 9

state 17

    (14) attrib -> DEF ID_OBS . EQUAL val

    EQUAL           shift and go to state 31


state 18

    (15) attrib -> DEF ID_DEV_ICE . EQUAL val

    EQUAL           shift and go to state 32


state 19

    (18) obsact -> QUANDO obs . COLON act
    (19) obsact -> QUANDO obs . COLON act SENAO act

    COLON           shift and go to state 33


state 20

    (20) obs -> ID_OBS . OPLOGIC val
    (22) obs -> ID_OBS . OPLOGIC val AND obs

    OPLOGIC         shift and go to state 34


state 21

    (21) obs -> ID_DEV_ICE . OPLOGIC val
    (23) obs -> ID_DEV_ICE . OPLOGIC val AND obs

    OPLOGIC         shift and go to state 35


state 22

    (24) act -> EXECUTE action . EM ID_DEV_ICE

    EM              shift and go to state 36


state 23

    (25) action -> LIGAR .

    EM              reduce using rule 25 (action -> LIGAR .)


state 24

    (26) action -> DESLIGAR .

    EM              reduce using rule 26 (action -> DESLIGAR .)


state 25

    (27) act -> ALERTA PARA . ID_DEV_ICE COLON MSG
    (28) act -> ALERTA PARA . ID_DEV_ICE COLON MSG COMMA ID_OBS
    (29) act -> ALERTA PARA . ID_DEV_ICE COLON MSG COMMA ID_DEV_ICE

    ID_DEV_ICE      shift and go to state 37


state 26

    (30) act -> DIFUNDIR COLON . MSG ARROW LBRACKET dev_list_n RBRACKET
    (31) act -> DIFUNDIR COLON . MSG ID_OBS ARROW LBRACKET dev_list_n RBRACKET
    (32) act -> DIFUNDIR COLON . MSG ID_DEV_ICE ARROW LBRACKET dev_list_n RBRACKET

    MSG             shift and go to state 38


state 27

    (2) dev_sec -> DISPOSITIVOS COLON dev_list . FIMDISPOSITIVOS

    FIMDISPOSITIVOS shift and go to state 39


state 28

    (3) dev_list -> dev_ice . dev_list
    (4) dev_list -> dev_ice .
    (3) dev_list -> . dev_ice dev_list
    (4) dev_list -> . dev_ice
    (5) dev_ice -> . ID_DEV_ICE
    (6) dev_ice -> . ID_DEV_ICE LBRACKET ID_OBS RBRACKET
    (7) dev_ice -> . ID_DEV_ICE LBRACKET ID_DEV_ICE RBRACKET

    FIMDISPOSITIVOS reduce using rule 4 (dev_list -> dev_ice .)
    ID_DEV_ICE      shift and go to state 29

    dev_ice                        shift and go to state 28
    dev_list                       shift and go to state 40

state 29

    (5) dev_ice -> ID_DEV_ICE .
    (6) dev_ice -> ID_DEV_ICE . LBRACKET ID_OBS RBRACKET
    (7) dev_ice -> ID_DEV_ICE . LBRACKET ID_DEV_ICE RBRACKET

    ID_DEV_ICE      reduce using rule 5 (dev_ice -> ID_DEV_ICE .)
    FIMDISPOSITIVOS reduce using rule 5 (dev_ice -> ID_DEV_ICE .)
    LBRACKET        shift and go to state 41


state 30

    (9) cmd_list -> cmd SEMICOLON cmd_list .

    $end            reduce using rule 9 (cmd_list -> cmd SEMICOLON cmd_list .)


state 31

    (14) attrib -> DEF ID_OBS EQUAL . val
    (16) val -> . NUMBER
    (17) val -> . BOOL

    NUMBER          shift and go to state 43
    BOOL            shift and go to state 44

    val                            shift and go to state 42

state 32

    (15) attrib -> DEF ID_DEV_ICE EQUAL . val
    (16) val -> . NUMBER
    (17) val -> . BOOL

    NUMBER          shift and go to state 43
    BOOL            shift and go to state 44

    val                            shift and go to state 45

state 33

    (18) obsact -> QUANDO obs COLON . act
    (19) obsact -> QUANDO obs COLON . act SENAO act
    (24) act -> . EXECUTE action EM ID_DEV_ICE
    (27) act -> . ALERTA PARA ID_DEV_ICE COLON MSG
    (28) act -> . ALERTA PARA ID_DEV_ICE COLON MSG COMMA ID_OBS
    (29) act -> . ALERTA PARA ID_DEV_ICE COLON MSG COMMA ID_DEV_ICE
    (30) act -> . DIFUNDIR COLON MSG ARROW LBRACKET dev_list_n RBRACKET
    (31) act -> . DIFUNDIR COLON MSG ID_OBS ARROW LBRACKET dev_list_n RBRACKET
    (32) act -> . DIFUNDIR COLON MSG ID_DEV_ICE ARROW LBRACKET dev_list_n RBRACKET

    EXECUTE         shift and go to state 12
    ALERTA          shift and go to state 13
    DIFUNDIR        shift and go to state 14

    act                            shift and go to state 46

state 34

    (20) obs -> ID_OBS OPLOGIC . val
    (22) obs -> ID_OBS OPLOGIC . val AND obs
    (16) val -> . NUMBER
    (17) val -> . BOOL

    NUMBER          shift and go to state 43
    BOOL            shift and go to state 44

    val                            shift and go to state 47

state 35

    (21) obs -> ID_DEV_ICE OPLOGIC . val
    (23) obs -> ID_DEV_ICE OPLOGIC . val AND obs
    (16) val -> . NUMBER
    (17) val -> . BOOL

    NUMBER          shift and go to state 43
    BOOL            shift and go to state 44

    val                            shift and go to state 48

state 36

    (24) act -> EXECUTE action EM . ID_DEV_ICE

    ID_DEV_ICE      shift and go to state 49


state 37

    (27) act -> ALERTA PARA ID_DEV_ICE . COLON MSG
    (28) act -> ALERTA PARA ID_DEV_ICE . COLON MSG COMMA ID_OBS
    (29) act -> ALERTA PARA ID_DEV_ICE . COLON MSG COMMA ID_DEV_ICE

    COLON           shift and go to state 50


state 38

    (30) act -> DIFUNDIR COLON MSG . ARROW LBRACKET dev_list_n RBRACKET
    (31) act -> DIFUNDIR COLON MSG . ID_OBS ARROW LBRACKET dev_list_n RBRACKET
    (32) act -> DIFUNDIR COLON MSG . ID_DEV_ICE ARROW LBRACKET dev_list_n RBRACKET

    ARROW           shift and go to state 51
    ID_OBS          shift and go to state 52
    ID_DEV_ICE      shift and go to state 53


state 39

    (2) dev_sec -> DISPOSITIVOS COLON dev_list FIMDISPOSITIVOS .

    DEF             reduce using rule 2 (dev_sec -> DISPOSITIVOS COLON dev_list FIMDISPOSITIVOS .)
    QUANDO          reduce using rule 2 (dev_sec -> DISPOSITIVOS COLON dev_list FIMDISPOSITIVOS .)
    EXECUTE         reduce using rule 2 (dev_sec -> DISPOSITIVOS COLON dev_list FIMDISPOSITIVOS .)
    ALERTA          reduce using rule 2 (dev_sec -> DISPOSITIVOS COLON dev_list FIMDISPOSITIVOS .)
    DIFUNDIR        reduce using rule 2 (dev_sec -> DISPOSITIVOS COLON dev_list FIMDISPOSITIVOS .)


state 40

    (3) dev_list -> dev_ice dev_list .

    FIMDISPOSITIVOS reduce using rule 3 (dev_list -> dev_ice dev_list .)


state 41

    (6) dev_ice -> ID_DEV_ICE LBRACKET . ID_OBS RBRACKET
    (7) dev_ice -> ID_DEV_ICE LBRACKET . ID_DEV_ICE RBRACKET

    ID_OBS          shift and go to state 55
    ID_DEV_ICE      shift and go to state 54


state 42

    (14) attrib -> DEF ID_OBS EQUAL val .

    SEMICOLON       reduce using rule 14 (attrib -> DEF ID_OBS EQUAL val .)


state 43

    (16) val -> NUMBER .

    SEMICOLON       reduce using rule 16 (val -> NUMBER .)
    AND             reduce using rule 16 (val -> NUMBER .)
    COLON           reduce using rule 16 (val -> NUMBER .)


state 44

    (17) val -> BOOL .

    SEMICOLON       reduce using rule 17 (val -> BOOL .)
    AND             reduce using rule 17 (val -> BOOL .)
    COLON           reduce using rule 17 (val -> BOOL .)


state 45

    (15) attrib -> DEF ID_DEV_ICE EQUAL val .

    SEMICOLON       reduce using rule 15 (attrib -> DEF ID_DEV_ICE EQUAL val .)


state 46

    (18) obsact -> QUANDO obs COLON act .
    (19) obsact -> QUANDO obs COLON act . SENAO act

    SEMICOLON       reduce using rule 18 (obsact -> QUANDO obs COLON act .)
    SENAO           shift and go to state 56


state 47

    (20) obs -> ID_OBS OPLOGIC val .
    (22) obs -> ID_OBS OPLOGIC val . AND obs

    COLON           reduce using rule 20 (obs -> ID_OBS OPLOGIC val .)
    AND             shift and go to state 57


state 48

    (21) obs -> ID_DEV_ICE OPLOGIC val .
    (23) obs -> ID_DEV_ICE OPLOGIC val . AND obs

    COLON           reduce using rule 21 (obs -> ID_DEV_ICE OPLOGIC val .)
    AND             shift and go to state 58


state 49

    (24) act -> EXECUTE action EM ID_DEV_ICE .

    SEMICOLON       reduce using rule 24 (act -> EXECUTE action EM ID_DEV_ICE .)
    SENAO           reduce using rule 24 (act -> EXECUTE action EM ID_DEV_ICE .)


state 50

    (27) act -> ALERTA PARA ID_DEV_ICE COLON . MSG
    (28) act -> ALERTA PARA ID_DEV_ICE COLON . MSG COMMA ID_OBS
    (29) act -> ALERTA PARA ID_DEV_ICE COLON . MSG COMMA ID_DEV_ICE

    MSG             shift and go to state 59


state 51

    (30) act -> DIFUNDIR COLON MSG ARROW . LBRACKET dev_list_n RBRACKET

    LBRACKET        shift and go to state 60


state 52

    (31) act -> DIFUNDIR COLON MSG ID_OBS . ARROW LBRACKET dev_list_n RBRACKET

    ARROW           shift and go to state 61


state 53

    (32) act -> DIFUNDIR COLON MSG ID_DEV_ICE . ARROW LBRACKET dev_list_n RBRACKET

    ARROW           shift and go to state 62


state 54

    (7) dev_ice -> ID_DEV_ICE LBRACKET ID_DEV_ICE . RBRACKET

    RBRACKET        shift and go to state 63


state 55

    (6) dev_ice -> ID_DEV_ICE LBRACKET ID_OBS . RBRACKET

    RBRACKET        shift and go to state 64


state 56

    (19) obsact -> QUANDO obs COLON act SENAO . act
    (24) act -> . EXECUTE action EM ID_DEV_ICE
    (27) act -> . ALERTA PARA ID_DEV_ICE COLON MSG
    (28) act -> . ALERTA PARA ID_DEV_ICE COLON MSG COMMA ID_OBS
    (29) act -> . ALERTA PARA ID_DEV_ICE COLON MSG COMMA ID_DEV_ICE
    (30) act -> . DIFUNDIR COLON MSG ARROW LBRACKET dev_list_n RBRACKET
    (31) act -> . DIFUNDIR COLON MSG ID_OBS ARROW LBRACKET dev_list_n RBRACKET
    (32) act -> . DIFUNDIR COLON MSG ID_DEV_ICE ARROW LBRACKET dev_list_n RBRACKET

    EXECUTE         shift and go to state 12
    ALERTA          shift and go to state 13
    DIFUNDIR        shift and go to state 14

    act                            shift and go to state 65

state 57

    (22) obs -> ID_OBS OPLOGIC val AND . obs
    (20) obs -> . ID_OBS OPLOGIC val
    (21) obs -> . ID_DEV_ICE OPLOGIC val
    (22) obs -> . ID_OBS OPLOGIC val AND obs
    (23) obs -> . ID_DEV_ICE OPLOGIC val AND obs

    ID_OBS          shift and go to state 20
    ID_DEV_ICE      shift and go to state 21

    obs                            shift and go to state 66

state 58

    (23) obs -> ID_DEV_ICE OPLOGIC val AND . obs
    (20) obs -> . ID_OBS OPLOGIC val
    (21) obs -> . ID_DEV_ICE OPLOGIC val
    (22) obs -> . ID_OBS OPLOGIC val AND obs
    (23) obs -> . ID_DEV_ICE OPLOGIC val AND obs

    ID_OBS          shift and go to state 20
    ID_DEV_ICE      shift and go to state 21

    obs                            shift and go to state 67

state 59

    (27) act -> ALERTA PARA ID_DEV_ICE COLON MSG .
    (28) act -> ALERTA PARA ID_DEV_ICE COLON MSG . COMMA ID_OBS
    (29) act -> ALERTA PARA ID_DEV_ICE COLON MSG . COMMA ID_DEV_ICE

    SEMICOLON       reduce using rule 27 (act -> ALERTA PARA ID_DEV_ICE COLON MSG .)
    SENAO           reduce using rule 27 (act -> ALERTA PARA ID_DEV_ICE COLON MSG .)
    COMMA           shift and go to state 68


state 60

    (30) act -> DIFUNDIR COLON MSG ARROW LBRACKET . dev_list_n RBRACKET
    (33) dev_list_n -> . ID_DEV_ICE
    (34) dev_list_n -> . ID_DEV_ICE COMMA dev_list_n

    ID_DEV_ICE      shift and go to state 70

    dev_list_n                     shift and go to state 69

state 61

    (31) act -> DIFUNDIR COLON MSG ID_OBS ARROW . LBRACKET dev_list_n RBRACKET

    LBRACKET        shift and go to state 71


state 62

    (32) act -> DIFUNDIR COLON MSG ID_DEV_ICE ARROW . LBRACKET dev_list_n RBRACKET

    LBRACKET        shift and go to state 72


state 63

    (7) dev_ice -> ID_DEV_ICE LBRACKET ID_DEV_ICE RBRACKET .

    ID_DEV_ICE      reduce using rule 7 (dev_ice -> ID_DEV_ICE LBRACKET ID_DEV_ICE RBRACKET .)
    FIMDISPOSITIVOS reduce using rule 7 (dev_ice -> ID_DEV_ICE LBRACKET ID_DEV_ICE RBRACKET .)


state 64

    (6) dev_ice -> ID_DEV_ICE LBRACKET ID_OBS RBRACKET .

    ID_DEV_ICE      reduce using rule 6 (dev_ice -> ID_DEV_ICE LBRACKET ID_OBS RBRACKET .)
    FIMDISPOSITIVOS reduce using rule 6 (dev_ice -> ID_DEV_ICE LBRACKET ID_OBS RBRACKET .)


state 65

    (19) obsact -> QUANDO obs COLON act SENAO act .

    SEMICOLON       reduce using rule 19 (obsact -> QUANDO obs COLON act SENAO act .)


state 66

    (22) obs -> ID_OBS OPLOGIC val AND obs .

    COLON           reduce using rule 22 (obs -> ID_OBS OPLOGIC val AND obs .)


state 67

    (23) obs -> ID_DEV_ICE OPLOGIC val AND obs .

    COLON           reduce using rule 23 (obs -> ID_DEV_ICE OPLOGIC val AND obs .)


state 68

    (28) act -> ALERTA PARA ID_DEV_ICE COLON MSG COMMA . ID_OBS
    (29) act -> ALERTA PARA ID_DEV_ICE COLON MSG COMMA . ID_DEV_ICE

    ID_OBS          shift and go to state 74
    ID_DEV_ICE      shift and go to state 73


state 69

    (30) act -> DIFUNDIR COLON MSG ARROW LBRACKET dev_list_n . RBRACKET

    RBRACKET        shift and go to state 75


state 70

    (33) dev_list_n -> ID_DEV_ICE .
    (34) dev_list_n -> ID_DEV_ICE . COMMA dev_list_n

    RBRACKET        reduce using rule 33 (dev_list_n -> ID_DEV_ICE .)
    COMMA           shift and go to state 76


state 71

    (31) act -> DIFUNDIR COLON MSG ID_OBS ARROW LBRACKET . dev_list_n RBRACKET
    (33) dev_list_n -> . ID_DEV_ICE
    (34) dev_list_n -> . ID_DEV_ICE COMMA dev_list_n

    ID_DEV_ICE      shift and go to state 70

    dev_list_n                     shift and go to state 77

state 72

    (32) act -> DIFUNDIR COLON MSG ID_DEV_ICE ARROW LBRACKET . dev_list_n RBRACKET
    (33) dev_list_n -> . ID_DEV_ICE
    (34) dev_list_n -> . ID_DEV_ICE COMMA dev_list_n

    ID_DEV_ICE      shift and go to state 70

    dev_list_n                     shift and go to state 78

state 73

    (29) act -> ALERTA PARA ID_DEV_ICE COLON MSG COMMA ID_DEV_ICE .
